@startuml
entity Lot {
  + id_lot : Long <<PK>>
  nom_article : varchar
  details : varchar
  statut : enum
  enchere : decimal
  date_heure_fin : date
  description : text
  image_url : varchar
  id_categorie : Long <<FK>>
  id_utilisateur : Long «FK»
}

entity Utilisateur {
    + nom_utilisateur : varchar <<PK>> // identifiant unique
    nom : varchar
    prenom : varchar
    email : varchar
    mot_de_passe : varchar
    telephone : varchar
    rue : varchar
    npa : varchar
    localite : varchar
    solde : decimal
    date_creation : date
}

entity Categorie {
  + id_categorie : Long <<PK>>
  nom : varchar
  id_parent : Long <<FK>> // null si catégorie racine
}

entity Enchere {
    + id_enchere : Long <<PK>>
    montant : decimal
    date_enchere : date
    nom_utilisateur : varchar <<FK>>
    id_lot : Long <<FK>>
}

Utilisateur --> Lot : "possède 0 ou plusieurs"
Lot }o--|| Categorie : "appartient à"
Categorie ||--o{ Categorie : "est issue d'un" (parent)
Utilisateur ||--o{ Enchere : "enchérit"

@enduml
